--- a/app/views/layouts/_footer.html.slim
+++ b/app/views/layouts/_footer.html.slim
@@ -1,24 +1,28 @@
 footer.callout.large.secondary style="margin: 0;"
   article.grid-container
    .grid-x
-      div class="large-4 cell"
+      div class="large-2 cell"
         h5 Descri.Inc
 
-      div class="large-8"
+      div
         ul class="menu grid-x grid-padding-x"
-          li.cell.large-3
+        
+          li.cell.large-2
+            =link_to "Why", toppages_why_path
+
+          li.cell.large-2
             a href="#" About company
             span 
               i class="fas fa-building fa-lg"
-          li.cell.large-3
+          li.cell.large-2
             a href="#" About Descri
             span
               i class="fas fa-list-alt fa-lg"
-          li.cell.large-3
+          li.cell.large-2
             a href="#" Follow You tube 
             span 
               i class="fab fa-youtube-square fa-lg"
-          li.cell.large-3
+          li.cell.large-2
             a href="#" Follow instagram
             span
               i class="fab fa-instagram-square fa-lg"
