--- a/app/views/toppages/index.html.slim
+++ b/app/views/toppages/index.html.slim
@@ -1,23 +1,26 @@
 
+div.margin-horizontal-3
 
-h2 Descri
+  h2 style="font-family: arial;" Descri 
 
-h5
- | Descri is a website that provide users with port information in Japan. Then, users do not have to google around to get local info anymor.
-   Let's get started.
- 
-
-h4 First of all, please sign up and watch inside.
-
-
-p 
-  | if you have any request or comment, please fill in the comment column on the page, or email us directly.
+  h5
+     | Descri is a website that provide users with port information in Japan. Then, users do not have to google around to get local info anymor.
+       Let's get started.
   
--if user_signed_in?
-  .toppage-button.align-center.grid-x
-    = link_to "See All Ports" , ports_path, class: "button rounded bordered shadow secondary cell large-4"
+  h4 First of all, please sign up and watch inside.
 
--else
-  .toppage-button.align-center.grid-x
-    = link_to "Sign Up" , new_user_registration_path, class: "button rounded bordered shadow success cell large-4"
-    = link_to "Log in" , new_user_session_path, class: "button rounded bordered shadow hollow success cell large-4"
+  p 
+    | if you have any request or comment, please fill in the comment column on the page, or email us directly.
+
+
+div
+
+  -if user_signed_in?
+    .toppage-button.align-center.grid-x
+      = link_to "See All Ports" , ports_path, class: "button rounded bordered shadow secondary cell large-4 signup margin-top-3"
+
+  -else
+    .toppage-button.align-center.grid-x
+      = link_to "Sign Up" , new_user_registration_path, class: "button rounded bordered shadow success cell large-4 signup margin-top-3"
+      = link_to "Log in" , new_user_session_path, class: "button rounded bordered shadow hollow success cell large-4 signup margin-top-3"
+
