--- a/app/views/admins/registrations/new.html.erb
+++ b/app/views/admins/registrations/new.html.erb
@@ -1,5 +1,6 @@
 
-
+<div id="admin-signup">
+  
 <h2>Sign up for Administration</h2>
 
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
@@ -28,6 +29,6 @@
  </div>
 <% end %>
 
-
+</div>
 
 
