--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -1,32 +1,28 @@
-
   .top-bar
   
     .top-bar-left
-      ul.dropdown.menu.grid-x
-        
-        li.menu-text.cell.large-1
+      ul.menu.grid-x
+        li.menu-text
           =link_to "descri", root_path, class: "header-font cellx"
-        
- 
+      
+    .top-bar-right
+      ul.menu.grid-x
         - unless signed_in?
           li.margin-left-2.margin-right-2
-            p
-              |For Administration ->
           
-          li.cell.large-1
-            =link_to "Sign-up", new_admin_registration_path, class: "header-font-item hollow button radious shadow  promary"
-          li.cell.large-1
-            =link_to "Login", new_admin_session_path, class: "header-font-item button radious bordered shadow promary"
+          li.cell
+            =link_to "Sign-up for Administration", new_admin_registration_path, class: "header-font-item hollow button radious shadow  promary"
+          li.cell
+            =link_to "Login for Administration", new_admin_session_path, class: "header-font-item button radious bordered shadow promary"
 
             
         - if admin_signed_in?
-          li.cell.large-1
+          li.cell
             =link_to "Logout", destroy_admin_session_path, class: "header-font-item cell hollow button promary shadow", method: :delete, data: {confirm: "Are you sure?"}
-          li.cell.large-1
+          li.cell
             =link_to "Administration", admin_path(current_admin.id), class: "header-font-item cell button promary shadow"
         
             
         - if user_signed_in?
-          li.cell.large-1.align-center
+          li.cell
             =link_to "Logout", destroy_user_session_path, class: "header-font-item cell hollow button success shadow", method: :delete, data: {confirm: "Are you sure?"}
-
