--- a/app/views/admins/show.html.slim
+++ b/app/views/admins/show.html.slim
@@ -23,7 +23,7 @@
         .callout
           ul class="menu simple"
             li 
-              =link_to "Create new port", new_port_path, data: {turbolinks: false}
+              =link_to "Create new port", new_port_path
 
   div class="grid-x align-center"
       
