--- a/app/views/ports/_form.html.erb
+++ b/app/views/ports/_form.html.erb
@@ -29,6 +29,10 @@
               
             <%=f.label :contact2, "(Please add second contact information)"%>
             <%=f.text_field :contact2%>
+            
+            <%=f.label :port_spec, "Write the spec of port"%>
+            <%=f.text_field :port_spec%>
+
               
             <div class="grid-x">
               <%=f.label :address, "Add where the new port is located"%>
