--- a/app/views/ports/show.html.slim
+++ b/app/views/ports/show.html.slim
@@ -28,6 +28,10 @@
                 tr
                   td contact 2
                   td #{@port.contact2}
+                
+                tr
+                  td Port spec
+                  td #{@port.port_spec}
             
 
           div class="medium-6 cell image"
